[TASK] Optimize code for PHP 5.5

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
     "name": "ipf/bib",
-    "require": {
+    "type": "typo3-cms-extension",
+    "require-dev": {
         "typo3-ci/typo3cms": "~6.2",
         "phpmd/phpmd": "~2.1",
         "phpunit/phpunit": "~4.4",
         "fortawesome/font-awesome": "~4.2"
     },
-    "license": "AGPL",
+    "license": "GPL",
     "authors": [
         {
             "name": "Ingo Pfennigstorf",
