Fix coding style

--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,6 @@
   "name": "ipf/bib",
   "type": "typo3-cms-extension",
   "require-dev": {
-    "typo3-ci/typo3cms": "~6.2",
-    "phpmd/phpmd": "~2.1",
-    "phpunit/phpunit": "~4.8",
     "fortawesome/font-awesome": "~4.4"
   },
   "license": "GPL-2.0",
@@ -13,5 +10,13 @@
       "name": "Ingo Pfennigstorf",
       "email": "i.pfennigstorf@gmail.com"
     }
-  ]
+  ],
+  "replace": {
+      "bib": "self.version"
+  },
+  "autoload": {
+      "psr-4": {
+          "Ipf\\Bib\\": "Classes/"
+      }
+  }
 }
