--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "typo3-cms-extension",
   "description": "A customizable bibliography and publication reference manager with a convenient frontend editor and import/export functionality.",
   "require-dev": {
-    "fortawesome/font-awesome": "~4.4"
+    "fortawesome/font-awesome": "~4.4",
+    "nimut/testing-framework": "^4.0"
   },
   "license": "GPL-2.0-only",
   "authors": [
@@ -13,12 +14,19 @@
     }
   ],
   "replace": {
-      "bib": "self.version"
+    "bib": "self.version",
+    "typo3ter/bib": "self.version"
+  },
+  "require": {
+    "php": "~7.0 || ~7.1",
+    "typo3/cms": "^8.7.0"
   },
   "autoload": {
-      "psr-4": {
-          "Ipf\\Bib\\": "Classes/"
-      },
-      "classmap": ["pi1/"]
+    "psr-4": {
+      "Ipf\\Bib\\": "Classes/"
+    },
+    "classmap": [
+      "pi1/"
+    ]
   }
 }
