--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
   "type": "typo3-cms-extension",
   "description": "A customizable bibliography and publication reference manager with a convenient frontend editor and import/export functionality.",
   "require-dev": {
-    "fortawesome/font-awesome": "~4.4",
-    "nimut/testing-framework": "^4.0"
+    "fortawesome/font-awesome": "~4.4"
   },
   "license": "GPL-2.0-only",
   "authors": [
